--- a/css/qualtrics2024.css
+++ b/css/qualtrics2024.css
@@ -1,4 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600);
+@import '../node_modules/@wellcometrust/design-system/dist/core.css';
+@import '../node_modules/@wellcometrust/design-system/dist/theme.css';
 :root {
   --primaryColour: #000000;
   --primaryTransparency: #0000009e;
@@ -1039,6 +1041,79 @@ div #Footer {
   #HeaderContainer, #LogoContainer, ::-webkit-scrollbar {
     display: none !important;
   }
+}
+.Skin #LogoContainer {
+  background: var(--color-grey-60);
+  margin: 0;
+  padding: var(--space-responsive-md);
+  position: sticky;
+  z-index: 10;
+}
+.Skin #Logo {
+  height: var(--space-static-xxl);
+  margin: 0;
+  width: var(--space-static-xxl);
+}
+.Skin #Logo img {
+  box-shadow: none;
+}
+.Skin #ProgressBar {
+  background: var(--color-grey-60);
+  border-top: 1px solid var(--color-grey-40);
+  margin: 0;
+  max-height: 100%;
+  max-width: 100%;
+  padding: var(--space-responsive-sm) var(--space-responsive-md);
+  position: sticky;
+  width: 100%;
+  top: --space-responsive-xxl;
+  z-index: 10;
+}
+.Skin #ProgressBar > div::before {
+  color: var(--color-white);
+  content: "Report progress";
+  display: block;
+  margin-bottom: var(--space-static-xs);
+  width: 100%;
+}
+.Skin #ProgressBar .ProgressBarContainer {
+  background: var(--color-grey-60);
+  position: relative;
+  top: 0;
+  width: 100%;
+}
+.Skin #ProgressBar .ProgressBarFillContainer {
+  background-color: -var(--color-grey-50);
+  border-radius: 2px;
+  height: var(--space-static-xs);
+}
+.Skin #ProgressBar .ProgressBarFill {
+  background-color: var(--color-blue-20);
+  border-radius: 2px;
+  height: var(--space-static-xs);
+}
+.Skin #ProgressBar tr td:first-child, .Skin #ProgressBar tr td:last-child {
+  font-size: 0 !important;
+  padding: 0 !important;
+  visibility: hidden;
+  width: 0 !important;
+}
+.Skin #Buttons #NextButton, .Skin #Buttons #PrevButton {
+  background: var(--color-blue-70);
+  border: 1px solid var(--color-blue-70);
+  bottom: 0;
+  color: var(--color-white);
+  font-size: var(--font-size-sm);
+  margin: var(--space-responsive-sm) 0;
+  padding: var(--space-responsive-sm) var(--space-responsive-md);
+  top: 0;
+}
+.Skin #Buttons #NextButton:hover, .Skin #Buttons #NextButton:active, .Skin #Buttons #PrevButton:hover, .Skin #Buttons #PrevButton:active {
+  background: var(--color-blue-60);
+  box-shadow: none;
+  border: 1px solid var(--color-blue-60);
+  bottom: 0;
+  top: 0;
 }
 
 /*# sourceMappingURL=qualtrics2024.css.map */
