--- a/scss/_2024.scss
+++ b/scss/_2024.scss
@@ -24,7 +24,9 @@
         max-height: 100%;
         max-width: 100%;
         padding: var(--space-responsive-sm) var(--space-responsive-md);
+        position: sticky;
         width: 100%;
+        top: var(--space-responsive-xxl);
         z-index: 10;
 
         > div {
